Web Inspector: color swatch and border are misaligned in Visual Styles sidebar https://bugs.webkit.org/show_bug.cgi?id=154471
Patch by Daniel Strokis <dstrokis@icloud.com> on 2016-03-10
Reviewed by Timothy Hatcher.

Color swatches in the Visual Styles sidebar now have only their left corners rounded (thanks to Matt Baker for the idea).

* UserInterface/Views/InlineSwatch.css:
(.inline-swatch > span):
(.inline-swatch): Deleted.
* UserInterface/Views/VisualStyleColorPicker.css:
(.visual-style-property-container.input-color-picker > .visual-style-property-value-container > .inline-swatch.color):

Canonical link: https://commits.webkit.org/173442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197975 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/InlineSwatch.css
+++ b/Source/WebInspectorUI/UserInterface/Views/InlineSwatch.css
@@ -39,7 +39,6 @@
     background-position: top left, bottom right;
     background-repeat: no-repeat;
     cursor: default;
-    overflow: hidden;
 }
 
 .inline-swatch.bezier {
@@ -72,6 +71,7 @@
     bottom: 0;
     left: 0;
     border: 1px solid hsla(0, 0%, 25%, 0.4);
+    border-radius: 4px 0px 0px 4px;
     pointer-events: none;
 }
 
